# SensorTagApp

./: .gitignore  CMakeLists.txt  README.md  config_st.cpp  config_st.h  configure.py  conversions.cpp  conversions.h  main.cpp  objects.cpp  objects.h  rw.cpp  rw.h  sensorconfig.csv  watki.cpp  watki.h
gattlib/: CMakeLists.txt
gattlib/examples/test/: CMakeLists.txt  conversions.c  conversions.h  test.c  test_old.c
